<?xml version="1.0"?>
<package>
  <name>final</name>
  <version>0.0.0</version>
  <description>The labpkg package</description>
  <maintainer email="aalhag@ucmerced.edu">aalhag</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>ros_msgs</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_depend>tf2</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>imu</build_depend>
	



  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>ros_msgs</run_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

  <run_depend>tf2</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>imu</run_depend>


  <export>
  </export>
</package>
